# tts-gui

./: .gitignore  README.md  pyproject.toml
docs/: ADR-001-ui-redesign.md  ADR-002-architecture-deepening.md  HANDOFF.md  PRD-v2-ui-redesign.md  PRD.md  REFACTOR-PLAN.md
src/tts_gui/: __init__.py  __main__.py  app.py  audio_player.py  history.py  settings.py  task_runner.py  tts_engine.py  ui.slint
tests/: test_audio_player.py  test_history.py  test_settings.py  test_task_runner.py  test_tts_engine.py
